almost finish the new version

--- a/public/index.html
+++ b/public/index.html
@@ -8,6 +8,11 @@
   <link rel="icon" href="favicon.ico" type="image/x-icon" />
   <link rel="shortcut icon" href="favicon.ico" type="image/x-icon" />
   <title>Sara Jinfan Bai</title>
+  <style>
+    html {
+      scroll-behavior: smooth;
+    }
+  </style>
 </head>
 
 <body>
